--- a/index.html
+++ b/index.html
@@ -4,45 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paulo Nievas</title>
-    <script src="https://kit.fontawasome.com/6140d5223c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">  
+    <link rel="stylesheet" href="/estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <!--nav-->
-            <nav>
-                <div class="logo"><img src="img/icon_logo.png" alt="logo"></div>
+    <!-- comienzo Nav -->
+    <nav>
+        <div class="container nav-container">
+            <ul class="nav-links">
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Skill">Skill</a></li>
+                <li><a href="#Proyectos">Proyectos</a></li>
+            </ul>
+            <div class="menu-btn"><a href=""><img src="/img/menu.png" alt=""></a></div>
             
-                <ul class="menu">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-            </nav>
-            <!--nav-->
         </div>
-    </header>
-    <!--section about-->
-    <div class="hero_section">
-        <div class="row" id="full_">
-            <div class="col_hero_info">
-                <h1>Hola, soy <span>Paulo Nievas</span></h1>
-                <p>Desde temprana edad me intereso la informática y la electrónica, cuento con un perfil autodidacta que me ha permitido aprender algunos lenguajes fuera del ámbito académico. <br/>
-                    Actualmente mis objetivos se centran en adquirir conocimientos nuevos y mejorar mis aptitudes para desenvolverme profesionalmente como fullstack.<br/>
-                    Una de mis pasiones es el mundo de la ciberseguridad, realice algunos cursos y asistí a varias conferencias, con muchas ganas de saber más, investigar y aprender, también aplicando arduino y raspberry pi.</p>
-                <button class="btn">CV</button>
-            </div>
-            <div>
-                <div class="col_hero_img">
-                    <div class="social_icon">
-                       <a href=""><img src="img/linkedin.png" alt=""></a>
-                       <a href=""><img src="img/github.png" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--section about-->
+    </nav>
+    <!-- fin Nav -->
+
+    <!-- comienzo header -->
+
+    <!-- fin header -->
+
+    
+    <!-- <button type="button" class="btn btn-outline-secondary _btn menu-button">Descarga CV</button> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
