--- a/index.html
+++ b/index.html
@@ -25,11 +25,33 @@
     <!-- fin Nav -->
 
     <!-- comienzo header -->
+    <header>
+        <div class="container header-container">
+            <div class="header-left">
+                <h1>Paulo Nievas</h1>
+                <h2>Soy <span class="typed-text">Jr web developer</span></h2>
+                <p>En mi trabajo mas reciente tenia como tareas el Diseño de e-mails · Hojas de estilos en cascada (CSS) · WordPress · Adobe Photoshop · Mantenimiento Web · Desarrollo web · HTML5 · CSS3 · VisualStudio · Desarrollo web back end · PHP · Desarrollo Full Stack.</p>
+                <button type="button" class="btn btn-outline-secondary _btn menu-button">Descarga CV</button>
+            </div>
+            <div class="header-right">
+                <div class="hero-img">
+                    <img src="/img/img_perfil_portfolio.png" alt="">
+                </div>
+                <div class="round">
+                    <div class="moon"></div>
+                </div>
+            </div>
+            <div class="social-links">
+                <a href=""><img src="/img/linkedin.png" alt=""></a>
+                <a href=""><img src="/img/github.png" alt=""></a>
+            </div>
 
+        </div>
+    </header>
     <!-- fin header -->
 
-    
-    <!-- <button type="button" class="btn btn-outline-secondary _btn menu-button">Descarga CV</button> -->
+
+    <!--  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
