--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
     <!-- comienzo Nav -->
     <nav>
-        <div class="container nav-container">
+        <div class="container nav-container menu_bar">
             <ul class="nav-links">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Skill">Skill</a></li>
                 <li><a href="#Proyectos">Proyectos</a></li>
+                <li class="social-links-nav"><a href=""><img src="/img/linkedin.png" alt=""></a></li>
+                <li class="social-links-nav"><a href=""><img src="/img/github.png" alt=""></a></li>
             </ul>
-            <div class="menu-btn"><a href=""><img src="/img/menu.png" alt=""></a></div>
+            <div class="menu-btn menu-button"><a href=""><img src="/img/menu.pn" alt=""></a></div>
             
         </div>
     </nav>
@@ -33,7 +35,7 @@
                 <h1>Paulo Nievas</h1>
                 <h2>Soy <span class="typed-text"></span></h2>
                 <p class="card-text">En mi trabajo mas reciente tenia como tareas el Diseño de e-mails · Hojas de estilos en cascada (CSS) · WordPress · Adobe Photoshop · Mantenimiento Web · Desarrollo web · HTML5 · CSS3 · VisualStudio · Desarrollo web back end · PHP · Desarrollo Full Stack.</p>
-                <button type="button" class="btn btn-outline-secondary _btn menu-button">Descarga CV</button>
+                <button type="button" class="btn btn-outline-secondary _btn">Descarga CV</button>
             </div>
             <div class="header-right">
                 <div class="hero-img">
@@ -73,7 +75,7 @@
     <!-- start skil -->
     <a name="Skill"></a>
     <section id="skill">
-        <h2 class="h2_color">Skill</h2>
+        <h2 class="h2_color">Skills</h2>
         <div class="skill">
             <div class="progress">
                 <img src="/icon_skill/html-5.png" alt="">
@@ -202,7 +204,7 @@
     <a name="Proyectos"></a>
     <section id="portfolio">
         <h2 class="h2_color">Proyectos</h2>
-        <div class="container portfolio-container">
+        <div class="container portfolio-container container_portfolio_proyect">
             <div class="portfolio-projects">
                 <div class="project card">
                     <img src="/img/project.jpg " alt="">
