--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Skill">Skill</a></li>
                 <li><a href="#Proyectos">Proyectos</a></li>
-                <li class="social-links-nav"><a href=""><img src="/img/linkedin.png" alt=""></a></li>
-                <li class="social-links-nav"><a href=""><img src="/img/github.png" alt=""></a></li>
+                <li class="social-links-nav"><a href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/" target="_blank"><img src="/img/linkedin.png" alt=""></a></li>
+                <li class="social-links-nav"><a href="https://github.com/F4cku23" target="_blank"><img src="/img/github.png" alt=""></a></li>
             </ul>
             <div class="menu-btn menu-button"><a href=""><img src="/img/menu.pn" alt=""></a></div>
             
@@ -48,8 +48,8 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href=""><img src="/img/linkedin.png" alt=""></a>
-                <a href=""><img src="/img/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/" target="_blank"><img src="/img/linkedin.png" alt=""></a>
+                <a href="https://github.com/F4cku23" target="_blank"><img src="/img/github.png" alt=""></a>
             </div>
 
         </div>
