termporal para tabajar en otra pc - medias y menu nav

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- comienzo Nav -->
     <nav>
         <div class="container nav-container menu_bar">
+            <button class="menu-btn menu-button abrir">ABRIR</button>
+            <button class="menu-btn menu-button cerrar">cerrar</button>
             <ul class="nav-links">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
@@ -21,8 +23,7 @@
                 <li class="social-links-nav"><a href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/" target="_blank"><img src="/img/linkedin.png" alt=""></a></li>
                 <li class="social-links-nav"><a href="https://github.com/F4cku23" target="_blank"><img src="/img/github.png" alt=""></a></li>
             </ul>
-            <div class="menu-btn menu-button"><a href=""><img src="/img/menu.pn" alt=""></a></div>
-            
+
         </div>
     </nav>
     <!-- fin Nav -->
