--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">  
     <link rel="stylesheet" href="/estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 <body>
     <!-- comienzo Nav -->
     <nav>
+        <button class="menu-btn menu-button abrir"><i class="bi bi-list"></i></button>
         <div class="container nav-container menu_bar">
-            <button class="menu-btn menu-button abrir">ABRIR</button>
-            <button class="menu-btn menu-button cerrar">cerrar</button>
+            
+            <button class="menu-btn menu-button cerrar"><i class="bi bi-x-lg"></i></button>
             <ul class="nav-links">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
