--- a/index.html
+++ b/index.html
@@ -208,13 +208,14 @@
     <section id="portfolio">
         <h2 class="h2_color">Proyectos</h2>
         <div class="container portfolio-container container_portfolio_proyect">
+
             <div class="portfolio-projects">
                 <div class="project card">
-                    <img src="/img/project.jpg " alt="">
-                    <h4>Projetc1</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, incidunt iusto labore aperiam consectetur architecto veniam molestiae.</p>
+                    <img src="https://github.com/F4cku23/cifradorCesar/blob/main/captura_img.PNG?raw=true" alt="">
+                    <h4>Cifrado de César</h4>
+                    <p>El cifrado César es uno de los métodos de cifrado de texto más simples. Consiste en sustituir cada letra del texto por una letra separada por un número fijo de letras del alfabeto.</p>
                     <div class="prohect-action-aria">
-                        <button type="button" class="btn btn-outline-secondary _btn menu-button">GitHub</button>
+                        <button onclick="window.open('https://github.com/F4cku23/cifradorCesar.git', '_blank')" type="button" class="btn btn-outline-secondary _btn menu-button">GitHub</button>
                     </div>
                 </div>
             </div>
