--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
             <div class="portfolio-projects">
                 <div class="project card">
-                    <img src="https://github.com/F4cku23/cifradorCesar/blob/main/captura_img.PNG?raw=true" alt="">
+                    <img src="img/captura_img.PNG" alt="">
                     <h4>Cifrado de César</h4>
                     <p>El cifrado César es uno de los métodos de cifrado de texto más simples. Consiste en sustituir cada letra del texto por una letra separada por un número fijo de letras del alfabeto.</p>
                     <div class="prohect-action-aria">
