--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1>Paulo Nievas</h1>
                 <h2>Soy <span class="typed-text"></span></h2>
                 <p class="card-text">En mi trabajo mas reciente tenia como tareas el Diseño de e-mails · Hojas de estilos en cascada (CSS) · WordPress · Adobe Photoshop · Mantenimiento Web · Desarrollo web · HTML5 · CSS3 · VisualStudio · Desarrollo web back end · PHP · Desarrollo Full Stack.</p>
-                <button type="button" class="btn btn-outline-secondary _btn">Descarga CV</button>
+                <a href="CV/Paulo_Facundo_Gaston_Nievas-CV_23.pdf" download="Paulo_Facundo_Gaston_Nievas-CV_23.pdf"><button type="button" class="btn btn-outline-secondary _btn">Descarga CV</button></a>
             </div>
             <div class="header-right">
                 <div class="hero-img">
