blank social link

--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
                 
                 <div class="social d-flex justify-content-center">
                     
-                    <a class="mx-2" href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/"><i class="fab fa-linkedin"></i></a>
-                    <a class="mx-2" href="https://github.com/F4cku23"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a class="mx-2" href="https://github.com/F4cku23" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
