--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h1 class="mx-auto my-0 text-uppercase">Paulo Nievas</h1>
                         <h2 class="text-white">Soy <span id="typed-text"></span></h2>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">En mi trabajo mas reciente tenia como tareas el Diseño de e-mails · Hojas de estilos en cascada (CSS) · WordPress · Adobe Photoshop · Mantenimiento Web · Desarrollo web · HTML5 · CSS3 · VisualStudio · Desarrollo web back end · PHP · Desarrollo Full Stack.</h2>
-                        <a href="CV/Paulo_Facundo_Gaston_Nievas-CV_23.pdf" download="Paulo_Facundo_Gaston_Nievas-CV_23.pdf"><button type="button" class="btn btn-outline-secondary _btn">Descarga CV</button></a>
+                        <a href="CV/Paulo_Facundo_Gaston_Nievas-CV_23.pdf" download="Paulo_Facundo_Gaston_Nievas-CV_23.pdf"><button type="button" class="button">Descarga CV</button></a>
                     </div>
                 </div>
             </div>
@@ -55,8 +55,10 @@
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
+                    
                     <div class="col-lg-8 parrafo_about">
                         <h2 class="text-white mb-4">Sobre Mi</h2>
+                        
                         <p class="text-white-50">
                             Desde una edad temprana, mi interés por la informática y la electrónica ha sido evidente. Mi enfoque autodidacta me ha brindado la oportunidad de explorar varios lenguajes de programación fuera del ámbito académico.
 
@@ -107,7 +109,7 @@
                                 <img class="img-fluid w-100" src="assets/img/captura_img_.png" alt="">
                                 <div class="portfolio-overlay">
                                     <!-- <a class="btn btn-square btn-outline-light mx-1"  href="https://github.com/F4cku23/cifradorCesar.git" target="_blank" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
-                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/cifradorCesar.git" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/cifradorCesar.git" target="_blank"><i class="fa fa-link"></i> Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
@@ -122,7 +124,7 @@
                                 <img class="img-fluid w-100" src="assets/img/inproter.png" alt="">
                                 <div class="portfolio-overlay">
                                     <!-- <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
-                                    <a class="btn btn-square btn-outline-light mx-1" href="https://inproter.com.pe" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://inproter.com.pe" target="_blank"><i class="fa fa-link"></i> Visitar Sitio</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
