--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
                     <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.5s">
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/project.jpg" alt="">
+                                <img class="img-fluid w-100" src="/assets/img/guitarView.PNG" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
+                                    
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/No-Country/C4-02-T" target="_blank"><i class="fa fa-link"></i>Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">En proceso</p>
-                                <h5 class="lh-base mb-0">Proximamente...</a>
+                                <p class="text-primary fw-medium mb-2">Guitar View - proyecto NoCountry</p>
+                                <h5 class="lh-base mb-0">Aplicación web de comparacion y ranking de guitarras, en donde se podrá comparar modelos y marcas de las mismas para poder llegar a una eleccion optima del instrumento.</a>
                             </div>
                         </div>
                     </div>
