--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">Guitar View - proyecto NoCountry</p>
-                                <h5 class="lh-base mb-0">Aplicación web de comparacion y ranking de guitarras, en donde se podrá comparar modelos y marcas de las mismas para poder llegar a una eleccion optima del instrumento.</a>
+                                <p class="text-primary fw-medium mb-2">Guitar View</p>
+                                <h5 class="lh-base mb-0">Proyecto NoCountry, aplicación web de comparacion y ranking de guitarras, en donde se podrá comparar modelos y marcas de las mismas para poder llegar a una eleccion optima del instrumento.</a>
                             </div>
                         </div>
                     </div>
