add new project

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="assets/img/captura_img_.png" alt="">
                                 <div class="portfolio-overlay">
-                                    <!-- <a class="btn btn-square btn-outline-light mx-1"  href="https://github.com/F4cku23/cifradorCesar.git" target="_blank" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
+                                    <a class="btn btn-square btn-outline-light mx-1"  href="assets/img/captura_img_.png" target="_blank" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> 
                                     <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/cifradorCesar.git" target="_blank"><i class="fa fa-link"></i> Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
                                 <p class="text-primary fw-medium mb-2">Cifrado de César</p>
-                                <h5 class="lh-base mb-0 txt-jus">El cifrado César es uno de los métodos de cifrado de texto más simples. Consiste en sustituir cada letra del texto por una letra separada por un número fijo de letras del alfabeto.</a>
+                                <h5 class="lh-base mb-0 txt-jus">El cifrado César es uno de los métodos de cifrado de texto más simples. Consiste en sustituir cada letra del texto por una letra separada por un número fijo de letras del alfabeto.</h5>
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
                                 <p class="text-primary fw-medium mb-2">INPROTER.sac</p>
-                                <h5 class="lh-base mb-0 txt-jus">Sitio web creado para INPROTER, fundada por un grupo de Ingenieros Mecánicos Electricistas e Industriales en Arequipa, con el objetivo de realizar proyectos y trabajos de ingeniería.</a>
+                                <h5 class="lh-base mb-0 txt-jus">Sitio web creado para INPROTER, fundada por un grupo de Ingenieros Mecánicos Electricistas e Industriales en Arequipa, con el objetivo de realizar proyectos y trabajos de ingeniería.</h5>
                             </div>
                         </div>
                     </div>
@@ -144,26 +144,26 @@
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
                                 <p class="text-primary fw-medium mb-2">Guitar View</p>
-                                <h5 class="lh-base mb-0">Proyecto NoCountry, aplicación web de comparacion y ranking de guitarras, en donde se podrá comparar modelos y marcas de las mismas para poder llegar a una eleccion optima del instrumento.</a>
+                                <h5 class="lh-base mb-0 txt-jus">Proyecto NoCountry, aplicación web de comparacion y ranking de guitarras, en donde se podrá comparar modelos y marcas de las mismas para poder llegar a una eleccion optima del instrumento.</h5>
                             </div>
                         </div>
                     </div>
-                    <!-- 
+                    
                     <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.1s">
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="assets/img/captura_img_.png" alt="">
+                                <img class="img-fluid w-100" src="assets/img/form_2.png" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="assets/img/form_2.png" data-lightbox="portfolio" target="_blank"><i class="fa fa-eye"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/user-submission-notification" target="_blank"><i class="fa fa-link"></i> Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">Custom Carpentry</p>
-                                <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                                <p class="text-primary fw-medium mb-2">User Submission and Notification Plugin</p>
+                                <h5 class="lh-base mb-0 txt-jus">Este plugin permite a los usuarios enviar contenido desde el front-end del sitio web y notifica al administrador cuando se recibe una nueva entrada. Incluye un tipo de contenido personalizado...</h5>
                             </div>
                         </div>
-                    </div>
+                    </div><!-- 
                     <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.3s">
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
@@ -249,8 +249,6 @@
         <section class="contact-section bg-black col-12" id="skill">
             
             <!-- section skill 
-            https://github.com/web-god/Animated-Circular-Progress-Bar
-
             https://github.com/web-god/Animated-Circular-Progress-Bar
             -->
             <div class="container">
