solucion de errores

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <img class="img-fluid w-100" src="/assets/img/guitarView.PNG" alt="">
                                 <div class="portfolio-overlay">
                                     
-                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/No-Country/C4-02-T" target="_blank"><i class="fa fa-link"></i>Github</a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/No-Country/C4-02-T" target="_blank"><i class="fa fa-link"></i> Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
@@ -170,8 +170,8 @@
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="assets/img/proyectoFinal_coderhouse.png" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="assets/img/proyectoFinal_coderhouse_3.png" data-lightbox="portfolio" target="_blank"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/entrega1Nievas" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="assets/img/form_2.png" data-lightbox="portfolio" target="_blank"><i class="fa fa-eye"></i></a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/entrega1Nievas" target="_blank"><i class="fa fa-link"></i> Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
