add project y alguans ediciones mas

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <img class="img-fluid w-100" src="assets/img/inproter.png" alt="">
                                 <div class="portfolio-overlay">
                                     <!-- <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
-                                    <a class="btn btn-square btn-outline-light mx-1" href="https://inproter.com.pe" target="_blank"><i class="fa fa-link"></i> Visitar Sitio</a>
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://inproter.com.pe" target="_blank"><i class="fa fa-link"></i> Ir a sitio</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
@@ -170,31 +170,31 @@
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="assets/img/proyectoFinal_coderhouse.png" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="assets/img/form_2.png" data-lightbox="portfolio" target="_blank"><i class="fa fa-eye"></i></a>
+                                    <!-- <a class="btn btn-square btn-outline-light mx-1" href="assets/img/proyectoFinal_coderhouse.png" data-lightbox="portfolio" target="_blank"><i class="fa fa-eye"></i></a> -->
                                     <a class="btn btn-square btn-outline-light mx-1" href="https://github.com/F4cku23/entrega1Nievas" target="_blank"><i class="fa fa-link"></i> Github</a>
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
                                 <p class="text-primary fw-medium mb-2">Trabajo Final coderHouse</p>
-                                <h5 class="lh-base mb-0">Proyecto pensado para poder hacer inscripción de equipos para torneo de League of Legends. Home: con imagen principal y un botón para acceder a ver las partidas de las ligas...</a>
+                                <h5 class="lh-base mb-0">Proyecto pensado para poder hacer inscripción de equipos para torneo de League of Legends. Home: con imagen principal y un botón para acceder a ver las partidas de las ligas...</h5>
                             </div>
                         </div>
-                    </div><!-- 
+                    </div> 
                     <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="assets/img/captura_img_.png" alt="">
+                                <img class="img-fluid w-100" src="assets/img/estelaBrisage.png" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
+                                    <!-- <a class="btn btn-square btn-outline-light mx-1" href="assets/img/estelaBrisage.png" data-lightbox="portfolio" target="_blank"><i class="fa fa-eye"></i></a> -->
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://estelabrisage.wordpress.com" target="_blank"><i class="fa fa-link"></i> Ir a Landing</a>
                                 </div>
                             </div>
                             <div class="bg-black border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">Custom Carpentry</p>
-                                <h5 class="lh-base mb-0">Wooden Furniture Manufacturing And Remodeling</a>
+                                <p class="text-primary fw-medium mb-2">Boutique Estela Brisage</p>
+                                <h5 class="lh-base mb-0">Boutique alquiler y venta vestidos de novias y quinceañeras de Arequipa, Perú. Ofrecemos una variedad de vestidos para quinceaños, novias y fiestas nacionales e importados.</h5>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                 </div>
 
 
