--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Paulo Nievas | Desarrollador Web" />
         <meta name="twitter:description" content="Portfolio de proyectos y tecnologías que utilizo." />
-        <meta name="twitter:image" content="https://f4cku23.github.io/assets/og-image.png" />
+        <meta name="twitter:image" content="https://f4cku23.github.io/assets/img_op.png" />
     
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
