cambios minimos txt

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Paulo Nievas</h1>
-                        <h2 class="text-white">Soy <span id="typed-text"></span></h2>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">En mi trabajo mas reciente tenia como tareas el Diseño de e-mails · Hojas de estilos en cascada (CSS) · WordPress · Adobe Photoshop · Mantenimiento Web · Desarrollo web · HTML5 · CSS3 · VisualStudio · Desarrollo web back end · PHP · Desarrollo Full Stack.</h2>
+                        
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5 ">En mis trabajos mas reciente tenia como tareas el diseño y maquetación de e-mails y sitios con HTML5, CSS3 · manejo de Adobe Photoshop · Mantenimiento y optimización de sitios web · Desarrollo backend con PHP, integrando funciones dinámicas y gestionando bases de datos · WordPress · Desarrollo Fullstack, utilizando Visual Studio y otras herramientas para entregar proyectos completos y funcionales.</h2>
                         <a href="CV/Paulo_Facundo_Gaston_Nievas-CV_23.pdf" download="Paulo_Facundo_Gaston_Nievas-CV_23.pdf"><button type="button" class="button">Descarga CV</button></a>
                     </div>
                 </div>
@@ -109,12 +109,10 @@
                     <div class="col-lg-8 parrafo_about">
                         <h2 class="text-white mb-4">Sobre Mi</h2>
                         
-                        <p class="text-white-50">
-                            Desde una edad temprana, mi interés por la informática y la electrónica ha sido evidente. Mi enfoque autodidacta me ha brindado la oportunidad de explorar varios lenguajes de programación fuera del ámbito académico.
-
-                            Actualmente, me encuentro enfocado en ampliar mis conocimientos y perfeccionar mis habilidades para destacar como desarrollador fullstack. Me motiva la búsqueda constante de nuevos aprendizajes y el deseo de progresar en mi carrera profesional.
-
-                            Una de mis grandes pasiones es el mundo de la ciberseguridad. He completado diversos cursos y participado en conferencias, alimentando mi curiosidad y ansias de profundizar mis conocimientos en este campo. Además, disfruto explorando proyectos prácticos con tecnologías como Arduino y Raspberry Pi, lo que me permite aplicar mis habilidades de manera creativa y práctica.
+                        <p class="text-white-50 txt-jus txt-about">
+                            Desde muy joven descubrí mi interés por la informática y la electrónica, lo que me llevó a aprender de forma autodidacta diferentes lenguajes de programación y tecnologías más allá del ámbito académico. <br><br>
+                            Actualmente me especializo en el desarrollo Fullstack, con experiencia en HTML, CSS, JavaScript, Bootstrap, PHP/MySQL y Python con Django, y en proceso de ampliar mis conocimientos en Laravel. Mi objetivo es seguir creciendo como desarrollador, aplicando buenas prácticas y explorando soluciones creativas. <br><br>
+                            La ciberseguridad es otra de mis pasiones: he realizado cursos y participado en conferencias que me permiten integrar una mirada crítica y segura en cada proyecto. Además, disfruto experimentar con Arduino y Raspberry Pi, llevando la teoría a proyectos prácticos que combinan software y hardware.
                         </p>
                     </div>
                 </div>
