--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Paulo Nievas</h1>
                         
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5 ">En mis trabajos mas reciente tenia como tareas el diseño y maquetación de e-mails y sitios con HTML5, CSS3 · manejo de Adobe Photoshop · Mantenimiento y optimización de sitios web · Desarrollo backend con PHP, integrando funciones dinámicas y gestionando bases de datos · WordPress · Desarrollo Fullstack, utilizando Visual Studio y otras herramientas para entregar proyectos completos y funcionales.</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5 ">Desarrollador web orientado al diseño y desarrollo frontend/backend. Fundador de PFN Creative, especializado en landings y micrositios optimizados. Experiencia en HTML5, CSS3, JavaScript, PHP, MySQL y WordPress, integrando diseño visual, maquetación, optimización y funciones dinámicas. Uso de Git, Visual Studio y herramientas de diseño para entregar proyectos estables y eficientes.</h2>
                         <a href="CV/Paulo_Facundo_Gaston_Nievas-CV_23.pdf" download="Paulo_Facundo_Gaston_Nievas-CV_23.pdf"><button type="button" class="button">Descarga CV</button></a>
                     </div>
                 </div>
