--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="assets/img/inproter.png" alt="">
                                 <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="assets/img/inproter.png" target="_blank" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                    
                                     <a class="btn btn-square btn-outline-light mx-1" href="https://inproter.com.pe" target="_blank"><i class="fa fa-link"></i> Ir a sitio</a>
                                 </div>
                             </div>
@@ -253,8 +253,8 @@
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid w-100" src="assets/img/soulriser_landing.png" alt="">
                             <div class="portfolio-overlay">
-                                <a class="btn btn-square btn-outline-light mx-1" href="assets/img/soulriser_landing.png" target="_blank" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                <a class="btn btn-square btn-outline-light mx-1" href="https://soulriser-band.github.io/soulriser" target="_blank"><i class="fa fa-link"></i> Github</a>
+                                
+                                <a class="btn btn-square btn-outline-light mx-1" href="https://soulriser-band.github.io/soulriser" target="_blank"><i class="fa fa-link"></i> Ir a Sitio</a>
                             </div>
                         </div>
                         <div class="bg-black border-5 border-light border-top-0 p-4">
