--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">INPROTER.sac</p>
+                                <p class="text-primary fw-medium mb-2">INPROTER.sac - Sitio web</p>
                                 <h5 class="lh-base mb-0 txt-jus">Sitio web creado para INPROTER, fundada por un grupo de Ingenieros Mecánicos Electricistas e Industriales en Arequipa, con el objetivo de realizar proyectos y trabajos de ingeniería.</h5>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">Guitar View</p>
+                                <p class="text-primary fw-medium mb-2">Guitar View - Sitio web</p>
                                 <h5 class="lh-base mb-0 txt-jus">Proyecto NoCountry, aplicación web de comparacion y ranking de guitarras, en donde se podrá comparar modelos y marcas de las mismas para poder llegar a una eleccion optima del instrumento.</h5>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                             <div class="bg-black border-5 border-light border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">Trabajo Final coderHouse</p>
+                                <p class="text-primary fw-medium mb-2">Trabajo Final coderHouse - Sitio web</p>
                                 <h5 class="lh-base mb-0">Proyecto pensado para poder hacer inscripción de equipos para torneo de League of Legends. Home: con imagen principal y un botón para acceder a ver las partidas de las ligas...</h5>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                                 </div>
                             </div>
                             <div class="bg-black border-top-0 p-4">
-                                <p class="text-primary fw-medium mb-2">Boutique Estela Brisage</p>
+                                <p class="text-primary fw-medium mb-2">Boutique Estela Brisage - Landing page</p>
                                 <h5 class="lh-base mb-0">Boutique alquiler y venta vestidos de novias y quinceañeras de Arequipa, Perú. Ofrecemos una variedad de vestidos para quinceaños, novias y fiestas nacionales e importados.</h5>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                             </div>
                         </div>
                         <div class="bg-black border-5 border-light border-top-0 p-4">
-                            <p class="text-primary fw-medium mb-2">SOULRISER band - página web</p>
+                            <p class="text-primary fw-medium mb-2">SOULRISER band - Sitio web</p>
                             <h5 class="lh-base mb-0 txt-jus">Soulriser es una banda de metal rock alternativo originaria de San Luis, Argentina. Con una visión clara: fusionar la potencia del metal con la expresividad del rock alternativo, bajo una propuesta conceptual y espiritual.</h5>
                         </div>
                     </div>
