--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </ul>
                     </div>
                 </div>  Row-->
-                <div class="row g-4 portfolio-container">
+                <div class="row g-4 portfolio-container text-white">
                     <div class="col-lg-4 col-md-6 portfolio-item javascript wow fadeInUp" data-wow-delay="0.1s">
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
